@@ -2,7 +2,9 @@ package com.ivoovi.demo.services;
 
 import com.ivoovi.demo.domain.Hardware;
 import com.ivoovi.demo.dto.HardwareDTO;
+import com.ivoovi.demo.repository.CategoryRepository;
 import com.ivoovi.demo.repository.HardwareRepository;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -10,37 +12,80 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
+@AllArgsConstructor
 public class HardwareServicesImpl implements HardwareServices{
 
 private final HardwareRepository hardwareRepository;
-
-    public HardwareServicesImpl(HardwareRepository hardwareRepository) {
-        this.hardwareRepository = hardwareRepository;
-    }
+private final CategoryRepository categoryRepository;
 
 
     @Override
     public List<HardwareDTO> findAll() {
-        return hardwareRepository.findAll().stream().map(HardwareDTO::new).collect(Collectors.toList());
+        return hardwareRepository.findAll().stream().map(this::mapToDTO).toList();
     }
 
     @Override
-    public Optional<HardwareDTO> findByICode(String code) {
-        return hardwareRepository.findByICode(code).map(HardwareDTO::new);
+    public List<HardwareDTO> findById(Long id) {
+        return hardwareRepository.findById(id).stream().map(this::mapToDTO).toList();
+    }
+
+
+    @Override
+    public HardwareDTO save(HardwareDTO hardwareDTO) {
+        return mapToDTO(hardwareRepository.save(mapToEntity(hardwareDTO)));
     }
 
     @Override
-    public Optional<HardwareDTO> save(HardwareDTO hardwareDTO) {
-        return hardwareRepository.save(new Hardware(hardwareDTO)).map(HardwareDTO::new);
+    public Optional<HardwareDTO> update( HardwareDTO updateHardwareDTO, Long id) {
+       Optional<Hardware> hardwareToUpdate = hardwareRepository.findById(id);
+
+       if(hardwareToUpdate.isPresent()){
+           Hardware hardware = hardwareToUpdate.get();
+           hardware.setName(updateHardwareDTO.getName());
+           hardware.setCode(updateHardwareDTO.getCode());
+           hardware.setStock(updateHardwareDTO.getStock());
+           hardware.setPrice(updateHardwareDTO.getPrice());
+           hardware.setType(categoryRepository.findByName(updateHardwareDTO.getType()));
+           return Optional.of(mapToDTO(hardwareRepository.save(hardware)));
+       }
+       return Optional.empty();
     }
 
     @Override
-    public Optional<HardwareDTO> update(String code, HardwareDTO updateHardwareDTO) {
-        return hardwareRepository.update(code, new Hardware(updateHardwareDTO)).map(HardwareDTO::new);
+    public boolean deleteByID(Long id) {
+        if(hardwareRepository.existsById(id)){
+            hardwareRepository.deleteById(id);
+            return true;
+        }
+        return false;
     }
 
     @Override
-    public void deleteByCode(String code) {
-        hardwareRepository.deleteByCode(code);
+    public boolean hardwareByIdExists(Long id) {
+        return hardwareRepository.existsById(id);
+    }
+
+
+    private HardwareDTO mapToDTO(Hardware hardware){
+        HardwareDTO hardwareDTO = new HardwareDTO();
+
+        hardwareDTO.setName(hardware.getName());
+        hardwareDTO.setCode(hardware.getCode());
+        hardwareDTO.setStock(hardware.getStock());
+        hardwareDTO.setPrice(hardware.getPrice());
+        hardwareDTO.setType(hardware.getType().getName());
+
+        return  hardwareDTO;
+    }
+
+    private Hardware mapToEntity(HardwareDTO hardwareDTO){
+        Hardware hardware = new Hardware();
+        hardware.setName(hardwareDTO.getName());
+        hardware.setCode(hardwareDTO.getCode());
+        hardware.setStock(hardwareDTO.getStock());
+        hardware.setPrice(hardwareDTO.getPrice());
+        hardware.setType(categoryRepository.findByName(hardwareDTO.getType()));
+
+        return  hardware;
     }
 }
